# rust-clean-ddd

./: .env.example  .gitignore  Cargo.toml  README.md
configs/: app.toml
docs/: TESTING.md
migrations/: 001_create_users_table.up.sql  002_create_roles_table.up.sql  003_create_permission_table.up.sql  004_create_user_roles_table.up.sql  005_create_role_permissions_table.up.sql  006_create_refresh_tokens_table.up.sql  007_create_menus_table.up.sql  007_create_table_audit_logs_table.up.sql  008_create_menus_table.up.sql  008_seed_admin.up.sql  009_create_menu_permissions_table.up.sql  010_align_roles_permissions_columns.up.sql  010_alter_user_table.up.sql  011_seed_admin.up.sql  012_create_audit_logs_table.sql  013_create_system_settings_table.up.sql  014_create_user_settings_table.up.sql  015_create_master_tables.up.sql  016_create_api_keys_table.up.sql
src/: lib.rs  main.rs  swagger.rs
src/bootstrap/: app.rs  dependency.rs  migration.rs  mod.rs  router.rs  server.rs  state.rs
src/common/: mod.rs
src/common/constants/: constants.rs
src/common/error/: app_error.rs  error_response.rs  mod.rs
src/common/extractor/: current_user.rs  mod.rs  required_fields.rs  validated_json.rs
src/common/pagination/: pagination.rs
src/common/response/: api_response.rs
src/common/time/: time.rs
src/common/types/: types.rs
src/common/validator/: validator.rs
src/config/: configuration.rs  env_configuration.rs  mod.rs
src/domain/: mod.rs
src/domain/api_key/: handler.rs  routes.rs
src/domain/audit_log/: errors.rs  handler.rs  mapper.rs  mod.rs  routes.rs  service.rs  validator.rs
src/domain/auth/: errors.rs  handler.rs  mod.rs  routes.rs  service.rs  validator.rs
src/domain/authorization/: handler.rs  routes.rs  service.rs
src/domain/master_data/: mod.rs  routes.rs
src/domain/menu_permissions/: handler.rs  mod.rs  routes.rs  service.rs
src/domain/menus/: handler.rs  mod.rs  routes.rs  service.rs
src/domain/permission/: handler.rs  routes.rs  service.rs
src/domain/role/: handler.rs  routes.rs  service.rs
src/domain/role_permission/: handler.rs  routes.rs  service.rs
src/domain/session/: handler.rs  mod.rs  routes.rs  service.rs
src/domain/system_settings/: handler.rs  routes.rs
src/domain/user/: handler.rs  mod.rs  routes.rs  service.rs
src/domain/user_role/: handler.rs  routes.rs  service.rs
src/domain/user_setting/: handler.rs  routes.rs
src/helper/: datetime.rs  filename.rs  ip.rs  mod.rs  random.rs  slug.rs  string.rs
src/infrastructure/: mod.rs
src/middleware/: api_key.rs  auth.rs  compression.rs  cors.rs  logging.rs  mod.rs  permission.rs  permission_layer.rs  rate_limit.rs  recovery.rs  request_id.rs  request_logging.rs  stack.rs  timeout.rs  trace.rs
src/routes/: api.rs  health.rs
(+206 files in other folders)
