[package]
name = "rust-clean"
version = "0.1.0"
edition = "2024"

[dependencies]

# ==========================
# Runtime
# ==========================
tokio = { version = "1", features = ["full"] }

# ==========================
# Web Framework
# ==========================
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
  "cors",
  "trace",
  "compression-gzip",
  "request-id",
  "timeout",
] }

# ==========================
# Swagger
# ==========================
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# ==========================
# Serialization
# ==========================
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ==========================
# Configuration
# ==========================
config = "0.15"
dotenvy = "0.15"
envy = "0.4"

# ==========================
# Database (MySQL)
# ==========================
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "mysql",
  "chrono",
  "uuid",
  "json",
  "macros",
] }

# ==========================
# Redis
# ==========================
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# ==========================
# Authentication
# ==========================
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"

# ==========================
# Validation
# ==========================
validator = { version = "0.20", features = ["derive"] }

# ==========================
# UUID
# ==========================
uuid = { version = "1", features = ["v4", "serde"] }

# ==========================
# Date Time
# ==========================
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
time = "0.3"

# ==========================
# Logging
# ==========================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# ==========================
# Error Handling
# ==========================
thiserror = "2"
anyhow = "1"

# ==========================
# Utilities
# ==========================
once_cell = "1"
rand = "0.9"
regex = "1"

# ==========================
# Async Trait
# ==========================
async-trait = "0.1"
sha2 = "0.11.0"
hex = "0.4"

reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "multipart",
  "rustls-tls",
] }

# [cors]
# # Development
# allow_credentials = true
# allow_origin = "*"
# allow_methods = ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
# allow_headers = ["Content-Type", "Authorization", "X-Request-ID"]
